# Nexus-nova

./: .env.example  .env.local  .gitignore  .pre-commit-config.yaml  BUILD_SUMMARY.md  CHANGELOG.md  COMMITS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  LICENSE  ML_MODULE_2_AUTOENCODER.md  ML_REQUIREMENTS.txt  Makefile  README.md  compose.yaml  dev-requirements.txt  docker-compose.prod.yml  docker-compose.yml  package.json  pyproject.toml  pytest.ini  ruff.toml  schema.sql  temp_commit.ps1  template.yaml  voice-template.yaml
.github/workflows/: build.yaml  ci.yml  publish.yml
demo/: demo-template.yaml  trigger.sh
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  INTEGRATION_GUIDE.md  OPERATIONS.md  QUICKSTART.md  TROUBLESHOOTING.md  api_reference.md  architecture.md  cli_guide.md  configuration.md  deployment.md  faq.md  index.md  setup-guide.md  voice-setup-guide.md
docs/api/: analyzer.md  budget.md  caller.md  config.md  events.md  handler.md  logs.md  notifier.md  prefetch.md  store.md  tools.md  triage.md  voice_handler.md
docs/architecture/: 01_system_design.md  02_data_flow.md  03_cloud_infrastructure.md  04_security.md
docs/components/: 01_analyzer.md  02_budget.md  03_caller.md  04_config.md  05_events.md  06_handler.md  07_logs.md  08_notifier.md  09_prefetch.md  10_store.md  11_tools.md  12_triage.md  13_voice_handler.md
docs/contributing/: DEVELOPMENT.md  ROADMAP.md  TESTING.md
docs/features/: 01_anomaly_detection.md  02_rca.md  03_notifications.md  04_voice_investigation.md  05_token_budgeting.md
docs/guides/: 01_getting_started.md  02_configuration.md  03_deployment.md  04_usage_examples.md
examples/: app_logs.py  basic_usage.py  database_logs.py  kubernetes_logs.py  rest_client.py  train_custom.py
novaml/: __init__.py  _analyzer.py  _cache.py  _classifier.py  _config.py  _embedder.py  _explainer.py  _forecaster.py  _logging.py  _metrics.py  _models.py  _pipeline.py  _triage.py  _types.py  _utils.py  benchmark.py  cli.py  server.py
scripts/: calibrate_lstm_threshold.py  calibrate_threshold.py  collect_voice_feedback.py  dpo_finetune.py  evaluate_prefetch_policy.py  export_onnx.py  extract_training_data.py  finetune_severity.py  predict_metrics.py  train_autoencoder.py  train_embeddings.py  train_linucb_agent.py  train_lstm.py  train_prophet_model.py  train_reward_model.py
src/: analyzer.py  api.py  classifier.py  config.py  embedder.py  triage.py
tests/: conftest.py  test_analyzer.py  test_autoencoder.py  test_bert_classifier.py  test_caller.py  test_classifier.py  test_config.py  test_embedder.py  test_embeddings.py  test_explainer.py  test_forecaster.py  test_lstm.py  test_models.py  test_pipeline.py  test_prefetch.py  test_rl_prefetch.py  test_rlhf.py  test_server.py  test_triage.py  test_utils.py  test_voice_handler.py
(+184 files in other folders)
