[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-nova"
version = "2.0.0"
description = "AI-powered log triage — open source with local LLMs and deep learning"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "torch>=2.3",
    "sentence-transformers>=3.0",
    "transformers>=4.41",
    "numpy>=1.26",
    "prophet>=1.1",
    "redis>=5.0",
    "asyncpg>=0.29",
]

[project.optional-dependencies]
prod = [
    "gunicorn>=21.0",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "moto[s3]>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
packages = ["src"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["sentence_transformers.*", "transformers.*", "prophet.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
