[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "novaml"
version = "0.1.0"
description = "AI-powered log intelligence. Zero cloud. One line."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Shendu09" }]
keywords = ["aiops", "log-analysis", "anomaly-detection", "deep-learning", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: System :: Monitoring",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
  "torch>=2.3",
  "sentence-transformers>=3.0",
  "transformers>=4.41",
  "pydantic>=2.7",
  "httpx>=0.27",
  "numpy>=1.26",
  "rich>=13.7",
  "ollama>=0.2",
]

[project.optional-dependencies]
forecast = ["prophet>=1.1", "pandas>=2.0"]
server   = ["fastapi>=0.111", "uvicorn[standard]>=0.29"]
explain  = ["shap>=0.45"]
all      = ["novaml[forecast,server,explain]"]
dev      = [
  "pytest>=8", "pytest-asyncio>=0.23", "pytest-cov>=5",
  "ruff>=0.4", "mypy>=1.10", "hatch>=1.9",
]

[project.urls]
Homepage    = "https://github.com/Shendu09/novaml"
Docs        = "https://novaml.readthedocs.io"
Issues      = "https://github.com/Shendu09/novaml/issues"

[project.scripts]
novaml = "novaml.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["novaml"]
